--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ body {
     font-weight: 400;
     overflow-x: hidden;
 }
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 ol, ul {
 	list-style: none;
 }
