--- a/css/style.css
+++ b/css/style.css
@@ -490,6 +490,12 @@ table {
   z-index: 1;
 }
 
+.logo-main {
+    margin-top: 30px;
+    max-width: 175px;
+    border-radius: 50%;
+}
+
 @media (min-width: 768px) and (max-width: 980px) {
     .content-holder h2 {
         font-size: 23px;
